[gd_scene load_steps=13 format=3 uid="uid://cfi8mf6s5spby"]

[ext_resource type="Script" path="res://CharacterBody2D.gd" id="1_tv6qf"]
[ext_resource type="Texture2D" uid="uid://bfpa7btc36bd2" path="res://Assets/goru_walk.png" id="2_mhedp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sbe8g"]
atlas = ExtResource("2_mhedp")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7a46x"]
atlas = ExtResource("2_mhedp")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnl5i"]
atlas = ExtResource("2_mhedp")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_upe2b"]
atlas = ExtResource("2_mhedp")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w8bwh"]
atlas = ExtResource("2_mhedp")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmqda"]
atlas = ExtResource("2_mhedp")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_kcnde"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbe8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7a46x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnl5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upe2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8bwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmqda")
}],
"loop": true,
"name": &"Gollem Walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_58mxo"]
radius = 18.7883

[sub_resource type="CircleShape2D" id="CircleShape2D_3vwkx"]
radius = 72.5603

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6lhdh"]
size = Vector2(80, 42)

[node name="Golem" type="CharacterBody2D"]
position = Vector2(509, 462)
script = ExtResource("1_tv6qf")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kcnde")
animation = &"Gollem Walk"
frame_progress = 0.16237

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5)
shape = SubResource("CircleShape2D_58mxo")

[node name="DetectionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
position = Vector2(-5, 2)
shape = SubResource("CircleShape2D_3vwkx")

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(1, 5)
shape = SubResource("RectangleShape2D_6lhdh")

[node name="TakeDamadge" type="Timer" parent="."]
wait_time = 0.5

[node name="ThrowRocks" type="Marker2D" parent="."]
position = Vector2(-21, -81)

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_hit_box_body_exited"]
[connection signal="timeout" from="TakeDamadge" to="." method="_on_take_damadge_timeout"]
